--- a/app/global.css
+++ b/app/global.css
@@ -2,7 +2,10 @@
 .navbar a {
   font-size: 2em;
 }
-.selected, .navbar-brand a, .navbar-brand a:hover, .navbar-nav a:hover {
+.selected,
+.navbar-brand a,
+.navbar-brand a:hover,
+.navbar-nav a:hover {
   color: rgb(232, 230, 227) !important;
   text-decoration: none;
 }
@@ -24,7 +27,8 @@
   color: #c82333;
   background-color: #c8233311 !important;
 }
-.nav-item, .form-label {
+.nav-item,
+.form-label {
   color: black !important;
 }
 /* Search Result Card */
@@ -36,19 +40,26 @@
 .sway {
   animation: sway 10s infinite;
 }
-@keyframes sway { 
-  0% { transform: rotate(0deg); } 
-  50% { transform: rotate(10deg); } 
-  100% { transform: rotate(0deg); } 
+@keyframes sway {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
 
 /* for smaller display */
 @media (max-width: 767px) {
-  .display-1, .display-2, .display-3 {
+  .display-1,
+  .display-2,
+  .display-3 {
     font-size: 3rem !important;
   }
 }
-
 
 /* NavBox */
 a {
@@ -68,7 +79,7 @@ a {
   background-color: rgba(255, 255, 255, 0.8);
 }
 .navBox a:before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   bottom: 0;
@@ -88,20 +99,20 @@ a {
 }
 #img-home {
   position: absolute;
-  bottom:116px;
-  right:0px;
+  bottom: 116px;
+  right: 0px;
   border-radius: 20px 20px 0px 0px;
 }
 #img-code {
   border-radius: 0px 0px 20px 20px;
 }
 .navBox {
-	position: fixed;
-	right: 25px;
-  top:50%;
-  height:120px;
+  position: fixed;
+  right: 25px;
+  top: 50%;
+  height: 120px;
   font-size: 1.2em;
-  width:12%;
+  width: 12%;
 }
 .navBox img {
   width: 100%;
@@ -111,7 +122,7 @@ a {
 }
 @media (max-width: 991px) {
   .navBox {
-    width:20%;
+    width: 20%;
   }
   .navBox-btn {
     color: black;
@@ -123,9 +134,11 @@ a {
 danger = #c82333
 info = #138496 */
 
-
 @media (max-width: 770px) {
-  .display-1, .display-2, .display-3, .display-4 {
+  .display-1,
+  .display-2,
+  .display-3,
+  .display-4 {
     font-size: 2em;
   }
 }
